# bolt-action-dice-emulator

./: LICENSE  README.md  pyproject.toml
backend/: README.md
backend/app/: __init__.py  catalog.py  main.py  models.py  points.py  store.py
data/army_lists/: 4a0f86dd-6a48-4894-9401-8881cd669d7a.json  c21acb60-7e97-4a69-bb2c-1c139299e70d.json
frontend/src/: App.css  App.tsx  api.ts
src/bolt_action_cli/: cli.py  game.py
src/bolt_action_cli/web/: app.py
src/bolt_action_cli/web/static/: style.css
src/bolt_action_cli/web/templates/: game.html  index.html
