[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bolt_action_cli"
version = "0.1.0"
description = "Bolt Action dice bag CLI helper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "rich",
    "typer",
]

keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
ba = "bolt_action_cli.cli:app"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]